--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=MySchool
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/theschool
+spring.datasource.url=jdbc:mysql://localhost:3306/myschool
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -9,5 +9,8 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ??????
+spring.main.web-application-type=none
 
 
