--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ??????
+# ??????? Spring Boot ???? data.sql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# ?? Web ??
 spring.main.web-application-type=none
-
-
