--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ??????? Spring Boot ???? data.sql
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-
 # ?? Web ??
 spring.main.web-application-type=none
+
+# ?? data.sql ????
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
